--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    min-width: 1170px;
 }
 .container {
     width: 100%;
