--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
     margin: 10px;
     border-radius: 10px;
     cursor: pointer;
-    color: darkslategray;
+    color: white;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -36,7 +36,7 @@ body {
     top: 50%;
     transform: translateY(-50%);
     left: 50px;
-    font-size: 6em;
+    font-size: 7em;
     font-weight: 700;
     margin: 0;
     opacity: 0;
